# geupsik-line

./: .gitignore  README_API.md  api.py  coco.names  example_client.py  exponential_params.json  index.html  main.py  pyproject.toml
results/: target_log.csv
results07-16/: data.csv  target_log.csv
time-place-analysis/: best_fit_params.json  chart.py  exponential_params.json  time.csv
time-place-analysis/fitting_results_20250726_180304/: all_fitting_results.json
