[project]
name = "geupsik-line"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "ultralytics>=8.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
]
